# FileSystemPro

./: .gitignore  .readthedocs.yaml  App.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENFORCEMENT.md  LICENCE  LICENSE  Program.py  README.md  UpdateLog.md  app.py  pyproject.toml  requirements.txt  setup.py  test.py
docs/: about.rst  compression.rst  conf.py  console.rst  device.rst  directory.rst  file.rst  filesystem.rst  index.rst  index.rst_OLD  installation.rst  watcher.rst  wrapper.rst
filesystem/: README.md  __init__.py
filesystem/__core__/: README.md  __init__.py
filesystem/compression/: README.md  __init__.py  tarfile.py  zipfile.py
filesystem/console/: README.md  __init__.py  ansi.py  ansitowin32.py  initialise.py  win32.py  winterm.py
filesystem/console/tests/: ansitowin32_test.py  console_test.py  initialise_test.py  winterm_test.py
filesystem/device/: README.md  __init__.py
filesystem/device/cpu/: __init__.py
filesystem/device/disks/: __init__.py
filesystem/device/memory/: __init__.py
filesystem/device/network/: __init__.py
filesystem/device/tests/: test_network.py
filesystem/directory/: README.md  __init__.py
filesystem/file/: README.md  __init__.py
filesystem/hardware/: __init__.py
filesystem/hardware/cpu/: __init__.py
filesystem/hardware/disks/: __init__.py
filesystem/tests/: test.py
filesystem/watcher/: README.md  __init__.py
filesystem/webclient/: __init__.py
filesystem/wrapper/: README.md  __init__.py  core.py  watcher.py
tests/: test.py
