[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "requests"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "FileSystemPro"
version = "3.0.0.0"
description = "FileSystemPro is a powerful toolkit designed to handle file and directory operations with ease and efficiency across various operating systems."
authors = ["Heitor Bisneto <heitor.bardemaker@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"